# rag-experiments

./: .gitignore  README.md  pyproject.toml  run.sh
chunking/: README.md  __init__.py  analysis.py  analyze.py  cli.py  evaluation.py  runner.py
chunking/configs/: chunk_size_controlled.yaml  chunk_size_correlation.yaml  cross_dataset.yaml  document_length.yaml  smoke_test.yaml
chunking/datasets/: __init__.py  base.py  hotpotqa.py  natural_questions.py
chunking/results/: ANALYSIS_REPORT.md  article_findings.json  controlled_comparison.md  cross_dataset_validation.json  cross_dataset_validation.md  lie_table.md  significance_tests.json  significance_tests.md
chunking/results/chunk_size_controlled/: summary.json
chunking/results/chunk_size_controlled/detailed/: recursive_1000.json  recursive_3000.json  recursive_default.json  semantic_1000.json  semantic_3000.json  semantic_default.json  sentence_3000.json  sentence_default.json  token_1000.json  token_3000.json  token_default.json
chunking/results/chunk_size_correlation/: summary.json
chunking/results/chunk_size_correlation/detailed/: token_1000_nq.json  token_2000_nq.json  token_3000_nq.json
chunking/results/cross_dataset/: summary.json
chunking/results/cross_dataset/detailed/: recursive_nq.json  semantic_nq.json  sentence_nq.json  token_nq.json
chunking/results/document_length/: summary.json
chunking/results/document_length/detailed/: recursive_long.json  (+11 more)
chunking/results/smoke_test/: summary.json
chunking/strategies/: __init__.py  base.py  recursive.py  semantic.py  sentence.py  token.py
(+1 files in other folders)
