[project]
name = "rag-experiments"
version = "0.1.0"
description = "RAG Reliability Experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-retrievers-bm25>=0.3.0",
    "chromadb>=0.5.0",
    "ragas>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "langchain-ollama",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_experiments"]

[tool.ruff]
line-length = 100
target-version = "py311"
